# Any-Python-Template

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
app/: main.py
contrib/: docker-compose.yml
deploy/web/: Dockerfile.linux  Dockerfile.win
tests/units/test_app/: test_main.py
